[package]
name = "sqf"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { version = "1.4.3", optional = true }
chumsky = { version = "0.9.2", optional = true }
lzo = { version = "0.1.0", optional = true, package = "lzo1x-1" }
thiserror = "1.0.38"

[features]
default = ["compiler", "parser"]
compiler = ["dep:byteorder", "dep:lzo"]
parser = ["dep:chumsky"]
